--- a/csgo/cfg/jailbreak.cfg
+++ b/csgo/cfg/jailbreak.cfg
@@ -13,7 +13,8 @@ mp_roundtime 14
 mp_round_restart_delay 7
 mp_halftime 0
 mp_team_timeout_max 0
-mp_maxrounds 15
+mp_maxrounds 0
+mp_timelimit 60
 mp_weapons_allow_heavyassaultsuit 1
 mp_weapons_allow_map_placed 1
 mp_drop_grenade_enable 1
@@ -40,11 +41,15 @@ ammo_9mm_max 1000
 ammo_buckshot_max 1000
 bot_kick
 
-mp_warmuptime 5
-mp_warmuptime_all_players_connected	5
+mp_warmuptime 0
+mp_warmuptime_all_players_connected	0
+mp_do_warmup_period 0
 
 sm_cvar phys_pushscale 99999999999
 sm_cvar sm_show_activity 0
 mp_forcecamera 0
 
 sv_allow_votes 0
+
+sm_cvar sm_rtv_changetime 1
+sm_cvar sm_rtv_postvoteaction 1
