Moved files, added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,188 @@
 *.smx
 *.exe
 
-csgo/addons/sourcemod/scripting/include/include-default/
+csgo/addons/sourcemod/scripting/include/admin.inc
+
+csgo/addons/sourcemod/scripting/include/adminmenu.inc
+
+csgo/addons/sourcemod/scripting/include/adt_array.inc
+
+csgo/addons/sourcemod/scripting/include/adt_stack.inc
+
+csgo/addons/sourcemod/scripting/include/adt_trie.inc
+
+csgo/addons/sourcemod/scripting/include/adt.inc
+
+csgo/addons/sourcemod/scripting/include/banning.inc
+
+csgo/addons/sourcemod/scripting/include/basecomm.inc
+
+csgo/addons/sourcemod/scripting/include/bitbuffer.inc
+
+csgo/addons/sourcemod/scripting/include/clientprefs.inc
+
+csgo/addons/sourcemod/scripting/include/clients.inc
+
+csgo/addons/sourcemod/scripting/include/commandfilters.inc
+
+csgo/addons/sourcemod/scripting/include/commandline.inc
+
+csgo/addons/sourcemod/scripting/include/console.inc
+
+csgo/addons/sourcemod/scripting/include/convars.inc
+
+csgo/addons/sourcemod/scripting/include/core.inc
+
+csgo/addons/sourcemod/scripting/include/cstrike.inc
+
+csgo/addons/sourcemod/scripting/include/datapack.inc
+
+csgo/addons/sourcemod/scripting/include/dbi.inc
+
+csgo/addons/sourcemod/scripting/include/entity_prop_stocks.inc
+
+csgo/addons/sourcemod/scripting/include/entity.inc
+
+csgo/addons/sourcemod/scripting/include/events.inc
+
+csgo/addons/sourcemod/scripting/include/files.inc
+
+csgo/addons/sourcemod/scripting/include/float.inc
+
+csgo/addons/sourcemod/scripting/include/functions.inc
+
+csgo/addons/sourcemod/scripting/include/geoip.inc
+
+csgo/addons/sourcemod/scripting/include/halflife.inc
+
+csgo/addons/sourcemod/scripting/include/handles.inc
+
+csgo/addons/sourcemod/scripting/include/helpers.inc
+
+csgo/addons/sourcemod/scripting/include/keyvalues.inc
+
+csgo/addons/sourcemod/scripting/include/lang.inc
+
+csgo/addons/sourcemod/scripting/include/logging.inc
+
+csgo/addons/sourcemod/scripting/include/mapchooser.inc
+
+csgo/addons/sourcemod/scripting/include/menus.inc
+
+csgo/addons/sourcemod/scripting/include/nextmap.inc
+
+csgo/addons/sourcemod/scripting/include/profiler.inc
+
+csgo/addons/sourcemod/scripting/include/protobuf.inc
+
+csgo/addons/sourcemod/scripting/include/regex.inc
+
+csgo/addons/sourcemod/scripting/include/sdkhooks.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_client.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_engine.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_entinput.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_entoutput.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_functions.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_gamerules.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_hooks.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_sound.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_stocks.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_stringtables.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_tempents_stocks.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_tempents.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_trace.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_variant_t.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools_voice.inc
+
+csgo/addons/sourcemod/scripting/include/sdktools.inc
+
+csgo/addons/sourcemod/scripting/include/smlib.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/arrays.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/clients.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/colors.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/concommands.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/convars.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/crypt.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/debug.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/dynarrays.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/edicts.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/effects.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/entities.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/files.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/game.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/general.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/math.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/menus.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/server.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/sql.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/strings.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/teams.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/vehicles.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/weapons.inc
+
+csgo/addons/sourcemod/scripting/include/smlib/world.inc
+
+csgo/addons/sourcemod/scripting/include/sorting.inc
+
+csgo/addons/sourcemod/scripting/include/sourcemod.inc
+
+csgo/addons/sourcemod/scripting/include/string.inc
+
+csgo/addons/sourcemod/scripting/include/testing.inc
+
+csgo/addons/sourcemod/scripting/include/textparse.inc
+
+csgo/addons/sourcemod/scripting/include/tf2_stocks.inc
+
+csgo/addons/sourcemod/scripting/include/tf2.inc
+
+csgo/addons/sourcemod/scripting/include/timers.inc
+
+csgo/addons/sourcemod/scripting/include/topmenus.inc
+
+csgo/addons/sourcemod/scripting/include/usermessages.inc
+
+csgo/addons/sourcemod/scripting/include/valist.inc
+
+csgo/addons/sourcemod/scripting/include/vector.inc
+
+csgo/addons/sourcemod/scripting/include/version_auto.inc
+
+csgo/addons/sourcemod/scripting/include/version.inc
